--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 Archive Files/DOCTRACK/300274700_2001053910283213_1576033697921700521_n.jpg
 Archive Files/Exist UI/iCloud-master 2.zip
+Archive Files/DOCTRACK/BACK-UP/doctrack.sql
