--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 Archive Files/DOCTRACK/300274700_2001053910283213_1576033697921700521_n.jpg
 Archive Files/Exist UI/iCloud-master 2.zip
 Archive Files/DOCTRACK/BACK-UP/doctrack.sql
+Archive Files/DOCTRACK/BACK-UP/2023-01-16/tbl_ledger.sql
