--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ Archive Files/Exist UI/iCloud-master 2.zip
 Archive Files/DOCTRACK/BACK-UP/doctrack.sql
 Archive Files/DOCTRACK/BACK-UP/2023-01-16/tbl_ledger.sql
 Documentation/Digital City/magazinefinal.psd
+Playbook/1269300_1478.psd
