--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ Archive Files/DOCTRACK/BACK-UP/doctrack.sql
 Archive Files/DOCTRACK/BACK-UP/2023-01-16/tbl_ledger.sql
 Documentation/Digital City/magazinefinal.psd
 Playbook/1269300_1478.psd
+Playbook/itcso page.psd
