--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ Archive Files/DOCTRACK/BACK-UP/2023-01-16/tbl_ledger.sql
 Documentation/Digital City/magazinefinal.psd
 Playbook/1269300_1478.psd
 Playbook/itcso page.psd
+Playbook/magazine2.psd
